RESULTS/AutoSpec/raw_results/out-3.5-NLA_lipus/out-sv-comp-mx/out/nested6_true-unreach-call_0005/nested6_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/nested6_true-unreach-call_0005/nested6_true-unreach-call_merged.c:32:17: error: unterminated comment
   32 |                 /*@;
      |                 ^
